IMOD History
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
3/13/14: Fixed a problem in eTomo - PEET where tilt angles where not being
loaded from a renamed tilt log file (In 4.7).(Bug# 1782)

3/8/14: Fixed deferring of initial messages to 3dmod on Mac (In 4.7).

3/8/14: Fixed lack of title bar and initial placement of toolbar for linked 
slicers (In 4.7).

3/7/14: Updated the Join tutorial (In 4.7).(Bug# 1785)

3/5/14: IMOD_4-7-1
3/5/14: In eTomo - PEET, made sure that empty attributes will not generate
Matlab syntax errors.(Bug# 1784)

2/28/14: IMOD_4-8-0 and branch to IMOD_4-7-0
2/28/14: Reading the bidirectional tilt value from the header file.(Bug# 1781)

2/26/14: Add options to 3dmod for setting initial center, angles, and zoom.

2/22/14: Fix exit status, button width, splash screen for Ctfplotter on Mac.

2/21/14: Added three more colors for arrows drawn with Grab with Note.

2/21/14: Fixed changing transparency during model view movies.

2/15/14: IMOD_4-6-41
2/14/14: In eTomo, fixed a problem with slowness when opening 3dmod dialogs.
(Bug# 1778)

2/14/14: In eTomo - PEET fixed problems with defaults and the handling of
missing properties.(Bug# 1738)

2/13/14: Switched default antialiasing filter for Newstack to Lanczos 3.

2/9/14: Updated the images in the eTomo tutorial.  Also exposed the
autofidseed append parameter and initialized the seed model contours in 3dmod.
(Bug# 1777)

2/9/14: In eTomo - Setup Reconstruction, allowing .mrc image files to be
selected, and renaming them to .st.(Bug# 1696)

2/7/14: Fixed problems with installer on Python 2.5 and Python 3.

2/6/14: In eTomo - PEET, accepting integer vectors in selectClassID.
(Bug# 1775)

2/5/14: Makecomfile adds option to append to seed model for autofidseedb.com.

2/3/14: Changed Bead Fixer so value-based controls show or hide appropriately
when model is changed.

2/1/14: Made installer able to take a .csh file, so it can be used to upgrade
on Windows without Cygwin.
