@@ -205,7 +205,8 @@ monitors of unequal size.) The windows will be arranged
 in rows and shrunk by up to 50%, if necessary, to fit as many as possible.  If
 the <B>Link</B> box is turned off for a slicer, its toolbar will be restored.
 If the first window is closed or its <B>Link</B> is turned off, another
-window's toolbar will be moved to the upper left.
+window's toolbar will be moved to the top or left.  You can press the close
+button on the detached toolbar window to close all of the linked slicers.  
 
 <A NAME = "AngleSavingToolbar"><H3>The Angle Saving Toolbar</H3></A>
 Slicer angles and center positions can be saved in the IMOD model by opening
